Bugs fixed and UI improvements

--- a/src/Factories.css
+++ b/src/Factories.css
@@ -1,6 +1,7 @@
 .Factories {
-    display:flex;
-    /* height: 200px; */
-    /* align-items: stretch; */
-    /* justify-content: space-between; */
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    align-items: center; 
 }
