--- a/src/Factory.css
+++ b/src/Factory.css
@@ -1,27 +1,49 @@
 .Factory {
     display: inline-block;
-    border: 1px solid black;
+    position: relative;
     border-radius: 10px;
     margin: 0 15px;
     min-width: 10vw;
     max-width: 15vw;
-    
-   
+    background: rgb(58, 58, 230);
 }
 
 .Children {
- /* min-height: 100px; */
+ min-height: 30px;
  display: flex;
+ align-items: center;
+ justify-content: center;
  flex-wrap: wrap;
- border: 1px solid green;
 }
 
 .FactoryNode {
-    border: 1px solid blue;
     min-height:100px;
     padding: 10px;
 }
 
 .Child {
-    border: 1px solid red;
+    background-color: rgb(128, 128, 252);
+    margin: 1.5px;
+}
+
+.Factory-name {
+    padding:0px;
+    margin:0px;
+}
+
+.Factory-btn-remove {
+    position:absolute;
+    right:0px;
+    background: none;
+    border: none;
+    font-size: .6rem;
+    z-index: 1;
+}
+.Factory-btn-edit {
+    position: absolute;
+    background: none;
+    border: none;
+    right: 10px;
+    font-size: .6rem;
+    z-index: 1;
 }
