--- a/src/EditFactoryNameForm.css
+++ b/src/EditFactoryNameForm.css
@@ -3,5 +3,13 @@
 }
 
 .EditFactoryNameForm-input {
-   width:90%;
+   margin:20px 0 10px 0;
+   width:70%;
+   border:none;
+   text-align: center;
+}
+
+.EditFactoryName-btn {
+   border-radius: 15px;
+   border:none;
 }
