--- a/src/Factories.css
+++ b/src/Factories.css
@@ -5,3 +5,11 @@
     justify-content: center;
     align-items: center; 
 }
+
+CardGroup{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    align-items: center;
+}
