--- a/src/Factory.css
+++ b/src/Factory.css
@@ -3,7 +3,7 @@
     position: relative;
     border-radius: 10px;
     margin: 0 15px;
-    min-width: 10vw;
+    /* min-width: 211px; */
     max-width: 15vw;
     background: rgba(58, 58, 230, 0.7);
 }
@@ -17,8 +17,10 @@
 }
 
 .FactoryNode {
+    min-width: 211px;
     min-height:100px;
-    padding: 10px;
+    background-color: rgba(128, 128, 128);
+    /* padding: 10px; */
 }
 .FactoryNode h4 {
     text-decoration: underline;
@@ -55,4 +57,23 @@
     right: 14px;
     font-size: .6rem;
     z-index: 1;
+}
+
+.GenerateChildren-btn{
+    position:absolute;
+    bottom:50px;
+    left:0;
+    right:0;
+    margin:auto;
+    width:70%;
+    background-color:rgb(211, 211, 211);
+    border:none;
+    border-radius: 12px;
+}
+.GenerateChildren-btn:hover{
+    transition:all 500ms;
+    background-color:rgb(169, 169, 169);
+    color: white;
+    border:none;
+    border-radius: 20px;
 }
