--- a/src/GenerateChildrenForm.css
+++ b/src/GenerateChildrenForm.css
@@ -1,5 +1,8 @@
 .GenerateChildrenForm-input {
-    width:90%;
+    width:70%;
+    border-radius: 10px;
+    border:none;
+    text-align: center;
 }
 
 h6{
@@ -7,21 +10,48 @@ h6{
 }
 
 .GenerateChildrenForm-label {
-    font-size: .6rem;
+    font-size: .8rem;
 }
 
 .hide {
     
 
     /* transition: height 700ms, opacity 200ms; */
-    transition: all 700ms;
+    transition:height 700ms;
+    /* display: none; */
     height:0px;
-   /* transform:translateY(-110%); */
     opacity: 0;
+    transform:translateY(-200px);
+    
 }
 .show {
-    position:unset;
-    transition:height 700ms, opacity 350ms;
-    height:280px;
+    /* position:unset; */
+    transform: none;
     opacity: 100;
+    height:240px;
+    transition:transform 1000ms, height 700ms, opactiy 1000ms;
+    
+    
+}
+
+.GenerateChildrenForm-btn{
+    /* border:none; */
+    background-color: transparent;
+    width:60%;
+    border-radius: 5px;
+    margin-top:15px;
+}
+.GenerateChildrenForm-btn:hover{
+    color:white;
+    background-color: grey;
+    width:55%;
+    border-color: transparent;
+    border-radius: 10px;
+    margin-top:15px;
+    transition:all 300ms;
+}
+
+div .modal-content{
+    border-radius: 20px;
+    border:none;
 }
